scripts/nullness/annotator/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8.txt
../annotator/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:6: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/DriveNow.java:8: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:24: error: cannot find symbol
	@Initializer public void create(String name, Auto auto) {
	 ^
  symbol:   class Initializer
  location: class Fahrlehrerindaten
../annotator/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/DriveNow.java:54: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class DriveNow
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
4 errors
